--- a/2.1.html
+++ b/2.1.html
@@ -14,7 +14,7 @@
     <main>
         <section id="current-events">
             <h2>Headline News and Updates</h2>
-            <p> <a href = "2.2">Click Here </a> If  You Want To Know The  Latest News And Updates Happening In The World  </p>
+            <p> <a href = "2.2.html">Click Here </a> If  You Want To Know The  Latest News And Updates Happening In The World  </p>
             <div class="articles">
                 </div>
         </section>
@@ -25,13 +25,13 @@
        
         <section id="analysis">
             <h2> Opinions</h2>
-            <p>If You Want To Read  The Opionion You Can Read Them <a href = "2.3"> Here </a>    </p>
+            <p>If You Want To Read  The Opionion You Can Read Them <a href = "2.3.html"> Here </a>    </p>
             <div class="experts">
                 </div>
         </section>
         <section id="discussion">
             <h2>Open Discussion Forum</h2>
-            <p>You Can Discuss Your Opinions For The Topics<a href = "2.4"> Here </a>  </p>
+            <p>You Can Discuss Your Opinions For The Topics<a href = "2.4.html"> Here </a>  </p>
             <div class="discussion">
                 </div>
         </section>
